mobile stretch img fix

--- a/src/styles/cyberia-estates.css
+++ b/src/styles/cyberia-estates.css
@@ -118,11 +118,11 @@ p#apt-description, p.auctions-text, h2#sizestitle {
         margin-top:1rem;
       }
       img#benefits-image, image#roadmap-image {
-        min-width:100%;
+        max-width:100%;
         max-height:10vh
       }
       section#roadmap, section#benefits{
-        min-height:15vh;
+        max-height:15vh;
       }
  
 }
